force-app/main/default/objects/CC_Config_Caso_Hidden__mdt/CC_Config_Caso_Hidden__mdt.object-meta.xml
<CustomObject>
    <description>Configuración para la entrada de casos por cognitive para Hidden</description>
    <label>Configuración Caso Hidden</label>
    <pluralLabel>Configuración Casos Hidden</pluralLabel>
</CustomObject>