force-app/main/default/objects/CC_Config_Caso_Hidden__mdt/fields/CC_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Aplicacion__c</fullName>
    <label>Aplicación</label>
    <length>25</length>
    <type>Text</type>
</CustomField>