force-app/main/default/objects/CC_Config_Caso_Hidden__mdt/fields/CC_CasoCanalProc__c.field-meta.xml
<CustomField>
    <fullName>CC_CasoCanalProc__c</fullName>
    <label>Canal procedencia caso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>