force-app/main/default/objects/CC_Config_Caso_Hidden__mdt/fields/CC_CasoEstado__c.field-meta.xml
<CustomField>
    <fullName>CC_CasoEstado__c</fullName>
    <label>Estado caso</label>
    <length>25</length>
    <type>Text</type>
</CustomField>