force-app/main/default/objects/CC_Config_Caso_Hidden__mdt/fields/CC_Tipo_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Contacto__c</fullName>
    <label>Tipo Contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>